# SandCastleReader-Server

./: .gitignore  README.md  deploy.py  pyproject.toml  run.py  run_debug.py
.github/workflows/: test.yml
scrs/: __init__.py  app.py  updated_json_provider.py  utils.py
scrs/assets/: glossary_database.csv  login_database.csv
test/: test_app.py
tests/: test_app.py
